--- a/main.html
+++ b/main.html
@@ -7,6 +7,17 @@
 </head>
 
 <body>
+	<ol data-ns-test="shoppingList">
+		<li>Laptop</li>
+		<li>Smartphone</li>
+		<li>Headphones</li>
+	</ol>
+
+	<ul>
+		<li data-ns-test="holidayList">Goa</li>
+		<li data-ns-test="Kerala">Munnar</li>
+		<li data-ns-test="holidayList">Jaipur</li>
+	</ul>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
