--- a/main.html
+++ b/main.html
@@ -7,15 +7,15 @@
 </head>
 
 <body>
-	<ol data-ns-test="shoppingList">
-		<li>Laptop</li>
-		<li>Smartphone</li>
-		<li>Headphones</li>
+	<ol>
+		<li data-ns-test="shoppingList">Laptop</li>
+		<li data-ns-test="shoppingList">Smartphone</li>
+		<li data-ns-test="shoppingList">Headphones</li>
 	</ol>
 
 	<ul>
 		<li data-ns-test="holidayList">Goa</li>
-		<li data-ns-test="Kerala">Munnar</li>
+		<li data-ns-test="holidayList">Munnar</li>
 		<li data-ns-test="holidayList">Jaipur</li>
 	</ul>
 	<!-- the entire body must be written by student -->
